--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -14,10 +14,11 @@ body {
 }
 
 input,
-buttom,
+button,
 textarea {
     font: 400 18px Roboto, sans-serif;
 }
+
 
 button {
     cursor: pointer;
@@ -30,6 +31,18 @@ form input {
     border: 1px solid #dcdce6;
     border-radius: 8px;
     padding: 0 24px;
+}
+
+form textarea {
+    width: 100%;
+    height: 60px;
+    min-height: 140px;
+    color: #333;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    line-height: 24px;
+    resize: vertical;
 }
 
 .button {
